<resources>
    <string name="app_name">ChurraScore</string>
    <string name="vitorias">VITÓRIAS:</string>
    <string name="adicionar_pontos">Adicionar Pontos:</string>
    <string name="pebolim">PEBOLIM</string>
    <string name="truco">TRUCO</string>
    <string name="futebol">FUTEBOL</string>
    <string name="determinar_tempo">TEMPO DE JOGO:</string>
    <string name="adicionar_gols">ADICIONAR GOLS:</string>
    <string name="title_home">FUTEBOL</string>
    <string name="title_dashboard">PEBOLIM</string>
    <string name="title_notifications">TRUCO</string>
    title_home
</resources>
