<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PebolimActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pebolim"
        android:textAlignment="center"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/colorPrimary" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="20dp"
        >

        <EditText
            android:id="@+id/edtTime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="Time 1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtTime2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="Time 2"
            android:inputType="textPersonName" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2.4"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="20dp"
        >

        <TextView
            android:id="@+id/txtPlacarPebolim1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@color/fundoSecundary"
            android:gravity="center"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/labelX"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight=".4"
            android:gravity="center_vertical"
            android:text="x"
            android:textAlignment="center"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/txtPlacarPebolim2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@color/fundoSecundary"
            android:gravity="center"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="50dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="20dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/vitoriasTime1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vitorias"
                android:textAlignment="center"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/vitoriasTime1Count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textStart"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/vitoriasTime2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vitorias"
                android:textAlignment="center"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/vitoriasTime2Count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textStart"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/labelAddPontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_pontos"
        android:textAlignment="center"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="20dp"
        >

        <Button
            android:id="@+id/btnAdd1Ponto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/fundoPrimary"
            android:text="+1"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btnRem1Ponto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/fundoPrimary"
            android:text="-1"
            android:textSize="30dp" />
    </LinearLayout>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />
</LinearLayout>

</ScrollView>
