<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrucoActivity">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/truco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:textSize="40dp"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:gravity="center"
            android:layout_marginVertical="10dp">

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="35dp"
                android:inputType="text"
                android:hint="TIME 1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="35dp"
                android:inputType="text"
                android:hint="TIME 2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:gravity="center">

            <TextView
                android:id="@+id/txtPlacarTruco1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="@color/fundoSecundary"
                android:gravity="center"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="50dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight=".4"
                android:text="x"
                android:textSize="40dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/txtPlacarTruco2"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="50dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:paddingHorizontal="20dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/vitoriasTime1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vitorias"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/vitoriasTime1Count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="textStart"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/vitoriasTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vitorias"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/vitoriasTime2Count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="textStart"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_pontos"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginVertical="20dp"
            android:textSize="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingHorizontal="20dp">

            <Button
                android:id="@+id/btnAdd1Tento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@color/fundoPrimary"
                android:text="+1"
                android:textSize="30dp" />

            <Button
                android:id="@+id/btnRem1Tento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@color/fundoPrimary"
                android:text="-1"
                android:textSize="30dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="20dp">

            <Button
                android:id="@+id/btnAdd3Tento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@color/fundoPrimary"
                android:text="+3"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnAdd6Tento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@color/fundoPrimary"
                android:text="+6"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnAdd9Tento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@color/fundoPrimary"
                android:text="+9"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnAdd12Tento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@color/fundoPrimary"
                android:text="+12"
                android:textSize="25dp" />>
        </LinearLayout>
        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/navigation" />
    </LinearLayout>
</ScrollView>